<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventActivity.EventCreation">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <include
            android:id="@+id/toolbar_jious"
            layout="@layout/toolbar_layout"/>

    <TextView
        android:id="@+id/eventCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_creation"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_below="@+id/toolbar_jious"
        android:layout_centerHorizontal="true"
        />

    <RelativeLayout
        android:id="@+id/nameRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventCreation">
        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/text_eName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_toRightOf="@+id/textViewName"
            android:layout_toEndOf="@+id/textViewName"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:layout_marginLeft="57dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/eventRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameRelative">

        <TextView
            android:id="@+id/textViewEventDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_centerVertical="true"
            android:textSize="18dp"
            />

        <EditText
            android:id="@+id/text_eDes"
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:ems="10"
            android:layout_toRightOf="@+id/textViewEventDescription"
            android:layout_toEndOf="@+id/textViewEventDescription"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:enabled="true"
            android:minLines="6"
            android:maxLines="6"
            android:isScrollContainer="true"
            android:layout_marginLeft="15dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/locationRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventRelative">

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="18dp"
            />

        <EditText
            android:id="@+id/text_eLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:layout_toRightOf="@+id/textViewLocation"
            android:layout_toEndOf="@+id/textViewLocation"
            android:inputType="textPersonName"
            android:layout_marginLeft="37dp"
            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/startDateRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationRelative">

        <TextView
            android:id="@+id/textViewStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textSize="18dp"
            />

        <EditText
            android:id="@+id/text_sDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="YYYY-MM-DD"
            android:importantForAutofill="no"
            android:layout_toRightOf="@+id/textViewStartDate"
            android:layout_toEndOf="@+id/textViewStartDate"
            android:inputType="date"
            android:layout_marginLeft="28dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/EndTimeRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startDateRelative">

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/EndDateRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EndTimeRelative">

        <TextView
            android:id="@+id/textViewEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textSize="18dp"
            />

        <EditText
            android:id="@+id/text_eDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="YYYY-MM-DD"
            android:importantForAutofill="no"
            android:layout_toRightOf="@+id/textViewEndDate"
            android:layout_toEndOf="@+id/textViewEndDate"
            android:inputType="date"
            android:layout_marginLeft="35dp"
            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/startTimeRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EndDateRelative">

        <TextView
            android:id="@+id/textViewStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textSize="18dp"
            />

        <EditText
            android:id="@+id/text_sTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="HH:MM"
            android:importantForAutofill="no"
            android:layout_toRightOf="@+id/textViewStartTime"
            android:layout_toEndOf="@+id/textViewStartTime"
            android:inputType="time"
            android:layout_marginLeft="23dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/endTimeRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startTimeRelative">

        <TextView
            android:id="@+id/textViewEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/text_eTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="HH:MM"
            android:importantForAutofill="no"
            android:layout_toRightOf="@+id/textViewEndTime"
            android:layout_toEndOf="@+id/textViewEndTime"
            android:inputType="time"
            android:layout_marginLeft="30dp"
            />
    </RelativeLayout>


        <RelativeLayout
            android:id="@+id/weatherRelative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/endTimeRelative">

            <Button
                android:id="@+id/btn_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Weather Check"
                android:layout_centerHorizontal="true"

                />



        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/visibleRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weatherRelative">

        <Switch
            android:id="@+id/switch_vis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:showText="true"
            android:text="Visibility"
            android:textOff="Subscribed"
            android:textOn="Public"
            android:textSize="18dp"
            android:layout_centerHorizontal="true"
            tools:checked="false" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create"
        android:layout_below="@+id/visibleRelative"
        android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</ScrollView>